spark-nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sparkui
  namespace: redditrend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sparkui
  template:
    metadata:
      labels:
        app: nginx-sparkui
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: config-volume
          configMap:
            name: nginx-sparkui-config

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-sparkui
  namespace: redditrend
spec:
  selector:
    app: nginx-sparkui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
