ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redditrend-ingress
  namespace: redditrend
spec:
  ingressClassName: traefik
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/top-nodes
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
      - path: /api/expand-node
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard-service
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: localhost
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
